[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PortraitScript.gd" type="Script" id=1]
[ext_resource path="res://Assets/Outline.shader" type="Shader" id=2]
[ext_resource path="res://RawAssets/GreenPortrait.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/lineColor = Color( 1, 0, 0.301961, 1 )
shader_param/lineThickness = null

[node name="GreenPortrait" type="Node2D"]
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D"]
polygon = PoolVector2Array( -8, 15, 9, 15, 13, -8, 13, -14, 10, -14, 6, -10, -6, -10, -10, -15, -13, -15, -13, -5, -10, 0 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 3 )

[connection signal="input_event" from="KinematicBody2D" to="." method="_on_KinematicBody2D_input_event"]
[connection signal="mouse_entered" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody2D" to="." method="_on_KinematicBody2D_mouse_exited"]
